App/style/main.css
@font-face {
	font-family: 'standard';
	src: url('../fonts/font.woff') format('woff'), url('../fonts/font.svg') format('svg');
}

html {
	width: 100%;
	height: 100%;
}

body {
	width: 100%;
	height: 100%;
	margin: 0%;
	font-family: standard;
	font-weight: bold;
	font-size: 5vw;
	background: url('../images/grabtag.png');
	background-size: 72% 45%;
	background-repeat: no-repeat;
	background-position: center;
	overflow: hidden;
}

#splashscreen {
	position: absolute;
	width: 100%;
	height: 100%;
	z-index: 2;
}

#backgroundFader {
	opacity: 0.8;
	width: 100%;
	height: 100%;
	position: absolute;
	z-index: -1;
}

#confetti {
	width: 100%;
	height: 100%;
	position: absolute;
	background: url('../images/confetti.gif');
	background-repeat: repeat;
	z-index: -1;
	display: none;
}

select, input {
	font-family: standard;
	font-size: 125%;
}

input[type="checkbox"], input[type="radio"] {
	zoom: 2;
	vertical-align: middle;
}

#main {
	position: relative;
	width: 100%;
	height: 100%;
}

header {
	padding: 3%;
	color: white;
	font-size: 125%;
	border-bottom: 4px solid black;
	height: 4%;
}

header a {
	text-decoration: none;
	color: white;
}

#app-name {
	font-size: 125%;
}

#tag {
	width: 100%;
	text-align: center;
	position: absolute;
	font-size: 200%;
	top: 50%;
	transform: translateY(-50%);
}

#tag-metadata {
	width: 100%;
	text-align: center;
	position: absolute;
	top: 72%;
	font-size: 100%;
	font-style: italic;
}

.tag-author {
	font-style: normal;
}

.tag-category {
	
}

.used-tag {
	font-style: italic;
	font-size: 75%;
}

.flag-tag {
	display: block;
	float: right;
	width: 12%;
	height: 7.5%;
}

.flag-tag img {
	width: 100%;
	height: 100%;
}

#nextButton {
	position: absolute;
	bottom: 5%;
	text-align: center;
	width: 74%;
	left: 10%;
	text-decoration: none;
	padding: 3%;
	border-radius: 2px;
	font-size: 200%;
	line-height: 200%;
}

.enabledNextButton {
	background-color: #DE4343;
	color: white;
	border: 4px solid black;
}

.enabledNextButton:active {
	box-shadow: inset 2px 2px 2px #6F2222;
	background-color: #B23636;
	color: #CACACA;
}

.disabledNextButton {
	background-color: #B2B2B2;
	color: white;
	border: 4px solid black;
}

.teamScore {
	color: white;
	width: 40%;
	padding: 2% 1%;
	position: absolute;
	border-radius: 2px;
	display: block;
	text-decoration: none;
	white-space: nowrap;
	text-align: center;
	overflow: hidden;
	border: 4px solid black;
}

.teamScore:active {
	box-shadow: inset 2px 2px 2px #101010;
	color: #B2B2B2;
	background-color: #2E2E2E;
}

.header-button {
	width: 8%;
	display: block; 
	position: absolute;
	top: 1.5%;
}

.header-button-icon {
	width: 100%;
	height: 100%;
}

#menuButton {
	right: 2%;
}

#helpButton {
	right: 14%;
}

#usedTagsButton {
	right: 26%;
	display: none;
}

#mainMenu {
	width: 100%;
	height: 100%;
	position: absolute;
	left: 0%;
	top: 0%;
	background-color: rgba(71,71,71,0.9);
	color: white;
	z-index: 5;
	overflow: auto;
	box-shadow: 16px 16px 8px black;
	font-size: 1.5em;
}

#mainMenuCloseIcon {
	width: 12%;
	height: 7.5%;
}

#mainMenu select, #mainMenu input {
	background-color: rgba(255,255,255,0.9);
}

.menuHeader {
	border-bottom: 1px solid white;
	border-top: 1px solid white;
	width: 98%;
	padding: 1%;
	background-color: rgba(135,135,135,0.9);
}

.menuItem {
	font-size: 90%;
	border-bottom: 1px solid rgba(71,71,71,0.9);
	border-top: 1px solid rgba(71,71,71,0.9);
	padding: 4%;
	font-weight: normal;
	display: block;
}

.menuItem:active {
	background-color: #979797;
}

.visible {
	visibility: visible;
	opacity: 1;
	transition: opacity 0.2s linear;
}

.hidden {
	visibility: hidden;
	opacity: 0;
	transition: visibility 0s 0.2s, opacity 0.2s linear;
}

img.middle {
	vertical-align: middle;
}

.standardDialogForm {
	height: 100%;
	position: relative;
}

.standardDialogDiv {
	overflow: auto;
	position: absolute;
	line-height: 100%;
}

.standardDialogDiv, .standardDialogBackDiv {
	width: 100%;
	height: 80%;
}

.standardDialogMoreIcon {
	display: block;
	position: absolute;
	right: 0%;
	bottom: 0%;
	width: 12%;
	height: 7.5%;
}

.stats {
	line-height: 100%;
	vertical-align: middle;
}

.stats-today {
	
}

.stats-this-week {
	font-size: 1.5em;
}

.stats-this-month {
	font-size: 2em;
}

.stats-total {
	font-size: 3em;
}

